test/gpu/native/assertOnFailToGpuizeAttr.2.good
warning: The prototype GPU support implies --no-checks. This may impact debuggability. To suppress this warning, compile with --no-checks explicitly
assertOnFailToGpuizeAttr.chpl:29: error: Loop is marked with @assertOnGpu but is not eligible for execution on a GPU
assertOnFailToGpuizeAttr.chpl:20: note: function is marked as not eligible for GPU execution
